# vmlx-station

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  SECURITY.md
.github/workflows/: ci.yml
Sources/VmlxStationMenuBar/: APIClient.swift  AppDelegate.swift  Models.swift  StatusMenuController.swift
config/: example-config.yaml
docs/: ARCHITECTURE.md  MENU_BAR_INSTALL.md  ROADMAP.md
launchd/: com.vmlxstation.daemon.plist  com.vmlxstation.menu-bar.plist
runtime/: README.md  pyproject.toml
runtime/src/vmlx_station_daemon/: admin_ui.py  app.py  cli.py  config.py  model_index.py  models.py  runtime.py  scheduler.py
runtime/src/vmlx_station_daemon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: bootstrap_runtime.sh  check_daemon.sh  check_menu_bar.sh  check_open_webui.sh  check_station.sh  dev_daemon.sh  dev_menu_bar.sh  install_daemon.sh  install_menu_bar.sh  install_open_webui.sh  install_station.sh  uninstall_daemon.sh  uninstall_menu_bar.sh  uninstall_open_webui.sh  uninstall_station.sh
